@@ -26,12 +26,14 @@ from otopi import util
 
 from . import packages
 from . import nrpe
+from . import glusterpmd
 
 
 @util.export
 def createPlugins(context):
     packages.Plugin(context=context)
     nrpe.Plugin(context=context)
+    glusterpmd.Plugin(context=context)
 
 
 # vim: expandtab tabstop=4 shiftwidth=4
