@@ -2,6 +2,8 @@ ovirt-host-deploy -- oVirt host deploy
 
 ????-??-?? - Version 1.2.4
 
+ * gluster: glusterpmd: support for glusterpmd configuration.
+   rhbz#1138198.
 
 2014-09-03 - Version 1.2.3
 
